--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
       "tap": "^18.6.1"
     },
     "dependencies": {
-      "express": "^4.18.2"
+      "express": "^4.18.2",
+      "bcrypt": "^5.1.1",
+      "jsonwebtoken": "^9.0.2",
+      "axios": "^1.6.2",
+      "dotenv": "^16.3.1"
     },
     "engines": {
       "node": ">= 18.0.0"
